--- a/src/server/lib/node/js/components/Dialogue/dialogue.scss
+++ b/src/server/lib/node/js/components/Dialogue/dialogue.scss
@@ -5,6 +5,9 @@
 	overflow: auto;
 	boxShadow: 0 3px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
 	border: 1px solid #d3d3d3;	
+	max-height: calc(100vh - 84px);
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .sdktoolbar {
