updated the birth/death options and bugfixes

--- a/src/client/assets/js/nodes/processors/uibuilder/features/mapper/components/Mapper/Mapper.scss
+++ b/src/client/assets/js/nodes/processors/uibuilder/features/mapper/components/Mapper/Mapper.scss
@@ -63,7 +63,7 @@
 }
 
 #mapper .sourceName{
-    padding: 5px;
+    padding: 7px;
     color: white;  
     background:#667793;
     border-bottom: 1px solid #8dbebf;
@@ -142,4 +142,8 @@
     background: #5f9ea0;
     color: white;
     padding: 7px;
+}
+
+#mapper .help {
+    padding: 10px;
 }
