--- a/src/client/assets/js/features/serverconsole/components/ServerConsole/serverconsole.css
+++ b/src/client/assets/js/features/serverconsole/components/ServerConsole/serverconsole.css
@@ -1,6 +1,6 @@
 #serverconsole{
 	position: absolute;
-	background: white;
+	background: rgba(255,255,255,0.9);
 	box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
 	border-top: 1px solid #d3d3d3;
 	overflow-y: auto;
@@ -23,4 +23,8 @@
     list-style: none;
     margin: 0px;
     padding: 0px;
+}
+
+.consolecontent{
+	margin-top: 15px;
 }
