--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -11,7 +11,7 @@
   <script src="/lib/react-15.6.1.min.js"></script>
   <script src="/lib/reactdom-15.6.1.min.js"></script>
   <script src="/lib/nodelib.js"></script>
-
+  <script src="/lib/flow.js"></script>
 <link rel="stylesheet" href="/css/app.css"></head>
 <body>
 
