--- a/src/client/assets/styles/cells.scss
+++ b/src/client/assets/styles/cells.scss
@@ -1,5 +1,6 @@
 html{
-  -webkit-font-smoothing: antialiased;  
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; 
 }
 
  *, *:before, *:after {
