--- a/src/client/assets/styles/index.scss
+++ b/src/client/assets/styles/index.scss
@@ -1,5 +1,19 @@
 @import '~react-md/src/scss/react-md';
 
+body::-webkit-scrollbar {
+    width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
+
 // Include all components
 @include react-md-everything;
 
