adding in private data tracking

--- a/src/client/assets/js/features/nodes/components/svg/svg.scss
+++ b/src/client/assets/js/features/nodes/components/svg/svg.scss
@@ -4,3 +4,10 @@ text.icon {
     fill: white;
     text-anchor: middle;
 }
+
+text.badge{
+	font-family: FontAwesome;
+    font-size: 15px;
+    fill: white;
+    text-anchor: middle;
+}
