--- a/src/client/assets/js/features/help/components/Help/help.css
+++ b/src/client/assets/js/features/help/components/Help/help.css
@@ -45,7 +45,13 @@ font-weight: bold;
 }
 
 #help .flexcolumn > div {
- 	min-height: 25px;  
+ 	min-height: 15px;  
+}
+
+#help hr{
+	border-style: solid;
+	border-color: #ddd;
+	border-width: 1px;
 }
 
 .schemadescription {
@@ -56,6 +62,28 @@ font-weight: bold;
 	
    	border-top:  1px solid #b6b6b6;
    
+}
+
+.flexrow > .personalicons{
+	display: -webkit-flex;
+	display: flex;
+	 -webkit-flex: 0 0 auto;
+    flex: 0 0 auto;
+    width: 118px;
+    background: #f2f2f2;
+}
+
+#help .circle {
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  /*padding: 8px;*/
+  line-height: 46px;
+  border: 2px solid #fff;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.8em;
 }
 
 .flexrow > .headertitle{
@@ -75,6 +103,21 @@ font-weight: bold;
    	text-transform: uppercase;  
 }
 
+.personaltitle{
+	font-weight: bold;
+	color: #4a4b4d;
+	font-size:0.85em;
+	margin-top:5px;
+}
+.personalcontent{
+	font-size:0.85em;
+}
+
+.personaltype{
+	font-weight: bold;
+	color: #4a4b4d;
+	font-size: 0.7em;
+}
 .objectoneoftitle{
 	background: #2196F3;
 	border: none;
