--- a/src/client/assets/js/features/nodes/components/svg/svg.scss
+++ b/src/client/assets/js/features/nodes/components/svg/svg.scss
@@ -19,6 +19,16 @@ text.badge{
    	-webkit-user-select: none;
 }
 
+text.accuracy{
+    font-size: 10px;
+    font-weight: bold;
+    fill: white;
+    text-anchor: middle;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+}
+
 text.warning {
   font-family: FontAwesome;
     font-size: 18px;
