--- a/src/client/assets/js/features/dpia/components/DPIA/style.css
+++ b/src/client/assets/js/features/dpia/components/DPIA/style.css
@@ -8,6 +8,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#dpia .content{
+   
+padding: 10px;
+}
+
 #dpia .intro {
     display: flex;
     flex-direction: row;
