--- a/src/client/assets/js/nodes/processors/rules/features/rules/components/RuleEditor/style.css
+++ b/src/client/assets/js/nodes/processors/rules/features/rules/components/RuleEditor/style.css
@@ -16,6 +16,7 @@
 #ruleeditor input[type="text"].md-text-field{
     width: auto;
     background: transparent;
+    height: auto;
 }
 
 #ruleeditor .md-cell{
@@ -41,4 +42,10 @@
     display: flex;
     flex-direction: column;
     
+}
+
+#ruleeditor .rulelabel{
+    font-size: 1.7em;
+    font-weight: 700;
+    color: #424242;
 }
