--- a/src/client/assets/js/nodes/processors/rules/features/rules/components/RuleEditor/style.css
+++ b/src/client/assets/js/nodes/processors/rules/features/rules/components/RuleEditor/style.css
@@ -49,3 +49,17 @@
     font-weight: 700;
     color: #424242;
 }
+
+#ruleeditor .deleterule{
+    position: relative;
+    left: 10px;
+    top: 7px;
+    font-size: 1em;
+    width: 20px;
+    height: 20px;
+    background: white;
+    border-radius: 50%;
+    border: 1px solid #b6b6b6;
+    text-align: center;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
